syntax = "proto3";

package raft;

service Raft {
  rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse) {}
  rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse) {}
  rpc StateMachineInfo(Empty) returns (Info) {}
  rpc WriteCommand(Command) returns (RaftClientStatus) {}
  rpc Request_Commit (Request_Commit_Message) returns (Response);
  rpc Commit (Commit_Message) returns (Response);

}

message Empty {}

message Info {
  string info = 1;
}

message RaftClientStatus {
  bool error = 1;
  string leader_id = 2;
  string message = 3;
}

message AppendEntriesRequest {
  int32 term = 1;
  string leader_id = 2;
  repeated LogEntry entries = 3;
  int32 previous_log_index = 4;
  int32 previous_log_term = 5;
  int32 commit_index = 6;
}

message AppendEntriesResponse {
  int32 term = 1;
  bool success = 2;
}

message RequestVoteRequest {
  int32 term = 1;
  string candidate_id = 2;
  int32 last_log_index = 3;
  int32 last_log_term = 4;
}

message RequestVoteResponse {
  int32 term = 1;
  bool granted = 2;
}

message LogEntry {
  int32 term = 1;
  Command command = 2;
}

message Command {
  string operation = 1;
  string key = 2;
  string value = 3;
}

message Response {
    bool status = 1; 
    string message = 2; 
}
message Request_Commit_Message{
    int32 id = 1;
}
message Commit_Message{
    int32 id = 1;
    bool rollback = 2; 
}